--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-node_modules
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Lockfile: keep or ignore — your call
+# package-lock.json
+
+# Builds / binaries
+dist/
+out/
+*.exe
+*.msi
+*.zip
+
+# OS / IDE
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
